[gd_scene load_steps=4 format=3 uid="uid://lol2dfh7enrj"]

[ext_resource type="Script" path="res://scenes/ui/card_rewards.gd" id="1_6yoj4"]
[ext_resource type="PackedScene" uid="uid://bor5gceevqpo6" path="res://scenes/ui/card_menu_ui.tscn" id="1_hhr02"]
[ext_resource type="Theme" uid="uid://c8iww1ssy8m72" path="res://button_theme.tres" id="2_4usyb"]

[node name="CardRewards" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.18689, 0.0176952, 0.119579, 0.392157)
script = ExtResource("1_6yoj4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -51.0
offset_right = 94.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Cards" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 32

[node name="CardMenuUI" parent="VBoxContainer/Cards" instance=ExtResource("1_hhr02")]
layout_mode = 2

[node name="CardMenuUI2" parent="VBoxContainer/Cards" instance=ExtResource("1_hhr02")]
layout_mode = 2

[node name="CardMenuUI3" parent="VBoxContainer/Cards" instance=ExtResource("1_hhr02")]
layout_mode = 2

[node name="SkipCardReward" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 26)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_4usyb")
theme_override_font_sizes/font_size = 16
text = "skip"
